; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_pflog.c_pflog_clone_destroy.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_pflog.c_pflog_clone_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ifnet*)* @pflog_clone_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pflog_clone_destroy(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca i32, align 4
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %5 = call i32 @pflog_remove(%struct.ifnet* %4)
  store i32 %5, i32* %3, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %11

8:                                                ; preds = %1
  %9 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %10 = call i32 @ifnet_detach(%struct.ifnet* %9)
  br label %11

11:                                               ; preds = %8, %7
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @pflog_remove(%struct.ifnet*) #1

declare dso_local i32 @ifnet_detach(%struct.ifnet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
